Changed login screen

--- a/report/NWU_TEMPLATE.tex
+++ b/report/NWU_TEMPLATE.tex
@@ -204,7 +204,19 @@ Submitted in pursuit of the degree\\\\
 
 \section{Introduction}
 
+\section{Background}
 
+\section{Front-end}
+
+\subsection{Login Screen}
+
+\subsection{Student Interface}
+
+\subsection{Lecturer Interface}
+
+\section{Back-end}
+
+\section{Database}
 %\begin{figure}[H]
 %\centering
 %\includegraphics[scale = 0.35]{./images/motorSchem.png}
@@ -235,7 +247,13 @@ Submitted in pursuit of the degree\\\\
 
 \section{Conclusion}
 
+\subsection{Strenghts}
 
+\subsection{Flaws}
+
+\subsection{Improvements}
+
+\subsection{Techniques Learned}
 \addcontentsline{toc}{section}{References}
 \nocite{*} % include this when you want to have all your (Jabref) references shown. comment out if you want only the ones that are used in the document diplayed.
 \bibliographystyle{IEEEtran}
