--- a/report/NWU_TEMPLATE.tex
+++ b/report/NWU_TEMPLATE.tex
@@ -161,12 +161,12 @@ Submitted in pursuit of the degree\\\\
 %------------------------------------Abstract-------------------------------------
 %*********************************************************************************
 
-\renewcommand{\abstractname}{\Large Abstract}
-\begin{abstract}
-\begin{large}
-******
-\end{large}
-\end{abstract}
+%\renewcommand{\abstractname}{\Large Abstract}
+%\begin{abstract}
+%\begin{large}
+%******
+%\end{large}
+%\end{abstract}
 
 \pagebreak
 
@@ -203,6 +203,8 @@ Submitted in pursuit of the degree\\\\
 \pagenumbering{arabic}
 
 \section{Introduction}
+
+
 
 \section{Background}
 
