--- a/report/NWU_TEMPLATE.tex
+++ b/report/NWU_TEMPLATE.tex
@@ -210,7 +210,20 @@ Submitted in pursuit of the degree\\\\
 
 \section{Front-end}
 
-\subsection{Login Screen}
+\subsection{Login and Register Interface}
+\begin{figure}[H]
+\centering
+\fbox{\includegraphics[scale = 0.6]{./images/login.png}}
+\caption{Login Page}
+\label{login}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\fbox{\includegraphics[scale = 0.6]{./images/register.png}}
+\caption{Register Page}
+\label{register}
+\end{figure}
 
 \subsection{Student Interface}
 
