added one lecturer image

--- a/report/NWU_TEMPLATE.tex
+++ b/report/NWU_TEMPLATE.tex
@@ -228,6 +228,12 @@ Submitted in pursuit of the degree\\\\
 \subsection{Student Interface}
 
 \subsection{Lecturer Interface}
+\begin{figure}[H]
+\centering
+\fbox{\includegraphics[scale = 0.6]{./images/lecturerProfile.png}}
+\caption{Lecturer Profile Page}
+\label{lecturerProfile}
+\end{figure}
 
 \section{Back-end}
 
