--- a/report/NWU_TEMPLATE.tex
+++ b/report/NWU_TEMPLATE.tex
@@ -214,25 +214,53 @@ Submitted in pursuit of the degree\\\\
 \begin{figure}[H]
 \centering
 \fbox{\includegraphics[scale = 0.6]{./images/login.png}}
-\caption{Login Page}
+\caption{Login page}
 \label{login}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \fbox{\includegraphics[scale = 0.6]{./images/register.png}}
-\caption{Register Page}
+\caption{Register page}
 \label{register}
 \end{figure}
 
 \subsection{Student Interface}
+\begin{figure}[H]
+\centering
+\fbox{\includegraphics[scale = 0.6]{./images/studentProfile.png}}
+\caption{Student profile page}
+\label{studentProfile}
+\end{figure}
 
 \subsection{Lecturer Interface}
 \begin{figure}[H]
 \centering
 \fbox{\includegraphics[scale = 0.6]{./images/lecturerProfile.png}}
-\caption{Lecturer Profile Page}
+\caption{Lecturer profile page}
 \label{lecturerProfile}
+\end{figure}
+
+
+\begin{figure}[H]
+\centering
+\fbox{\includegraphics[scale = 0.6]{./images/lecturerAssessments.png}}
+\caption{Lecturer assessments page}
+\label{lecturerAssessments}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\fbox{\includegraphics[scale = 0.6]{./images/lecturerGradebook.png}}
+\caption{Lecturer gradebook page}
+\label{lecturerGradebook}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\fbox{\includegraphics[scale = 0.6]{./images/lecturerLessons.png}}
+\caption{Lecturer lessons page}
+\label{lecturerLessons}
 \end{figure}
 
 \section{Back-end}
