a lot of images changed

--- a/report/NWU_TEMPLATE.tex
+++ b/report/NWU_TEMPLATE.tex
@@ -208,6 +208,8 @@ Submitted in pursuit of the degree\\\\
 
 \section{Background}
 
+\section{Database}
+
 \section{Front-end}
 
 \subsection{Login and Register Interface}
@@ -225,15 +227,10 @@ Submitted in pursuit of the degree\\\\
 \label{register}
 \end{figure}
 
-\subsection{Student Interface}
-\begin{figure}[H]
-\centering
-\fbox{\includegraphics[scale = 0.6]{./images/studentProfile.png}}
-\caption{Student profile page}
-\label{studentProfile}
-\end{figure}
+
 
 \subsection{Lecturer Interface}
+
 \begin{figure}[H]
 \centering
 \fbox{\includegraphics[scale = 0.6]{./images/lecturerProfile.png}}
@@ -241,6 +238,32 @@ Submitted in pursuit of the degree\\\\
 \label{lecturerProfile}
 \end{figure}
 
+\newcommand{\picScale}{0.55}
+\newcommand{\minipageWidth}{0.46\textwidth}
+
+\begin{figure}[H]
+\minipage[t]{\minipageWidth}
+	\centering
+	\fbox{\includegraphics[scale = \picScale]{./images/createCourse.png}}
+	\vspace{-0.2cm}
+	\caption{Page for creating a course}
+	\label{createCourse}
+\endminipage\hfill
+\minipage[t]{\minipageWidth}
+	\centering
+	\fbox{\includegraphics[scale = \picScale]{./images/addCourse.png}}
+	\vspace{-0.2cm}
+	\caption{Page for adding a course}
+	\label{addCourse}
+\endminipage
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\fbox{\includegraphics[scale = 0.6]{./images/lecturerLessons.png}}
+\caption{Lecturer lessons page}
+\label{lecturerLessons}
+\end{figure}
 
 \begin{figure}[H]
 \centering
@@ -257,15 +280,36 @@ Submitted in pursuit of the degree\\\\
 \end{figure}
 
 \begin{figure}[H]
-\centering
-\fbox{\includegraphics[scale = 0.6]{./images/lecturerLessons.png}}
-\caption{Lecturer lessons page}
-\label{lecturerLessons}
+\minipage[t]{\minipageWidth}
+	\centering
+	\fbox{\includegraphics[scale = \picScale]{./images/lecturerCreateAssessment.png}}
+	\vspace{-0.2cm}
+	\caption{Creating assessments page}
+	\label{lecturerCreateAssessment}
+\endminipage\hfill
+\minipage[t]{\minipageWidth}
+	\centering
+	\fbox{\includegraphics[scale = \picScale]{./images/lecturerUpdateMarks.png}}
+	\vspace{-0.2cm}
+	\caption{Update student marks page}
+	\label{lecturerUpdateMarks}
+\endminipage
 \end{figure}
+
+
+
+\subsection{Student Interface}
+\begin{figure}[H]
+\centering
+\fbox{\includegraphics[scale = 0.6]{./images/studentProfile.png}}
+\caption{Student profile page}
+\label{studentProfile}
+\end{figure}
+
+
 
 \section{Back-end}
 
-\section{Database}
 %\begin{figure}[H]
 %\centering
 %\includegraphics[scale = 0.35]{./images/motorSchem.png}
