--- a/report/NWU_TEMPLATE.tex
+++ b/report/NWU_TEMPLATE.tex
@@ -81,7 +81,7 @@
 \author{ \Large \bf by: \\ \Large\bf
 \begin{tabular}{l  r}
 Jacques Beukes & 26028107\\
-Dewald Krynauw & ********\\
+Dewald Krynauw & 26013835
 \end{tabular}\\\\
 Submitted in pursuit of the degree\\\\
 \bf BACHELOR OF ENGINEERING\\\\
@@ -263,7 +263,78 @@ Submitted in pursuit of the degree\\\\
 \label{lecturerLessons}
 \end{figure}
 
+\pagebreak
 \section{Back-end}
+\subsection{Sign up and Login}
+The 'passport' package in Nodejs allows the site to handle sessions as well as cookies in an organised way. The session stores the current user's personal info inside his/her browser to allow for a personalised site.\\
+The 'bcrypt' package allows the passwords to be encrypted in the database with the sha256 algorithm. This ensures that the system administrators can enter into the user's sites.\\
+Figures \ref{cLocalSignup} and \ref{cLocallogin} can be summarised as, insert new user into database with encrypted password. The user logging in gets flashed error messages; should the details entered be wrong.
+
+
+\begin{figure}[H]
+\centering
+\fbox{\includegraphics[width = 0.9\textwidth]{./images/cLocalSignup}}
+\caption{Code: Local Sign-up}
+\label{cLocalSignup}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\fbox{\includegraphics[width = 0.95\textwidth]{./images/cLocalLogin}}
+\caption{Code: Local Login}
+\label{cLocallogin}
+\end{figure}
+
+\subsection{Courses}
+Courses can be created and edited by lecturers, whereas students can only view the courses. Figure \ref{cPostcourse} shows how a new course is added to the database. Figure \ref{ccourses} shows how the course and all of its content is retrieved as a JSON object from the database and rendered to the user.
+
+\begin{figure}[H]
+\centering
+\fbox{\includegraphics[width = 0.95\textwidth]{./images/cPostCourse}}
+\caption{Code: Create new course}
+\label{cPostcourse}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\fbox{\includegraphics[width = 0.95\textwidth]{./images/cCourses}}
+\caption{Code: Get Courses}
+\label{ccourses}
+\end{figure}
+
+\subsection{Lessons}
+The code in Figure \ref{cLessons} shows the post request when the lecturer creates a new lesson. The details of of the lesson is added with the files and are sent to the server and database for later retrieval.
+
+\begin{figure}[H]
+\centering
+\fbox{\includegraphics[width = \textwidth]{./images/clessons}}
+\caption{Code: Create Lessons}
+\label{cLessons}
+\end{figure}
+
+
+\subsection{Assessments}
+The lecturer can add assessments to a course and enter the marks of the students for a specific assessment. Figure \ref{cAses} below shows how a new assessment is posted to the database and how marks are inserted for a specific user.
+
+\begin{figure}[H]
+\centering
+\fbox{\includegraphics[width = \textwidth]{./images/cAssess}}
+\caption{Code: Create and Update Marks for Assessments}
+\label{cAses}
+\end{figure}
+
+
+
+\subsection{Grade-book}
+Lastly the grade-book is split into two types, one for students and one for lecturers. The student grade book only gets the student's mark for all the assessments in that course. The lecturer's grade book show all the students and their respective mark for all of the assessments. 
+
+\begin{figure}[H]
+\centering
+\fbox{\includegraphics[width = \textwidth]{./images/cGrade}}
+\caption{Code: Grade book}
+\label{cGrade}
+\end{figure}
+
 
 \section{Database}
 %\begin{figure}[H]
