--- a/report/NWU_TEMPLATE.tex
+++ b/report/NWU_TEMPLATE.tex
@@ -203,10 +203,20 @@ Submitted in pursuit of the degree\\\\
 \pagenumbering{arabic}
 
 \section{Introduction}
-
+In this practical, an e-learning website is created to serve as a platform for communicating course material and evaluation results between lecturers and students. This documents is the report for this practical. It contains a description of the website's database, front-end and back-end structure.
 
 
 \section{Background}
+
+\subsection{mySQL}
+
+\subsection{Node.js}
+
+\subsection{HTML}
+
+\subsection{CSS}
+
+\subsection{Javascript}
 
 \section{Database}
 
@@ -354,8 +364,14 @@ Students have the same interface as lecturers, except for the editing functional
 \subsection{Flaws}
 
 \subsection{Improvements}
+Future versions of the website could include a section for online assessments, where lecturers are able to create new tests and students can complete existing tests. The website must then be able to evaluate the student's answers and update their marks.
+
+The current version of the website can only be accessed via a local network. To launch the site for global use, a domain name have to be acquired.
 
 \subsection{Techniques Learned}
+HTTP post and get requests where used extensively in this project. Hence, much knowledge of the protocol and its header structure where acquired. 
+
+
 \addcontentsline{toc}{section}{References}
 \nocite{*} % include this when you want to have all your (Jabref) references shown. comment out if you want only the ones that are used in the document diplayed.
 \bibliographystyle{IEEEtran}
