conclusion and wit shots

--- a/report/NWU_TEMPLATE.tex
+++ b/report/NWU_TEMPLATE.tex
@@ -426,19 +426,28 @@ Lastly the grade-book is split into two types, one for students and one for lect
 %\endminipage
 %\end{figure}
 
+\pagebreak
 \section{Conclusion}
 
-\subsection{Strenghts}
+\subsection{Strengths}
+By using the Node js for developing instead of PHP creates a much more developer friendly environment. Using the Node js mysql library allows the developer to create queries that is already safe from SQL injections. Passwords are encrypted with sha256 inside the database. The structure of the database is easily expandable. All of the user's data is stored in a session and cookies, alleviating unnecessary requests to the server and making the website more personalised.   
 
 \subsection{Flaws}
+An automatic assessment creator and marker would be better than manually typing in the marks students received for their tests. Manually typing in each student's mark for each assessment could become slow and tedious. 
 
 \subsection{Improvements}
 Future versions of the website could include a section for online assessments, where lecturers are able to create new tests and students can complete existing tests. The website must then be able to evaluate the student's answers and update their marks.
 
-The current version of the website can only be accessed via a local network. To launch the site for global use, a domain name have to be acquired.
+The current version of the website can only be accessed via a local network. To launch the site for global use, a domain name have to be acquired.\\
+
+A better developing scheme would be to use a MVC (Model View Controller) structure. 
 
 \subsection{Techniques Learned}
-HTTP post and get requests where used extensively in this project. Hence, much knowledge of the protocol and its header structure where acquired. 
+HTTP post and get requests where used extensively in this project. Hence, much knowledge of the protocol and its header structure where acquired. \\
+
+How to set up a database and preform queries that have relationship with each other.\\
+
+How to create a website with HTML, Javascript and CSS, whilst providing a user friendly experience to the users.
 
 
 \addcontentsline{toc}{section}{References}
